build: flip Java indent to spaces, migrate stale tests, fix test contracts
- Spotless: leadingSpacesToTabs -> leadingTabsToSpaces for Java (reformats
  ~340 files); ktfmt reformats for 13 Kotlin files
- buildSrc: jvmToolchain + updated compiler args; move libs.versions.toml
  under gradle/ and point catalogs at new path; slim root settings
- Migrate TrieNodeTest/SLLNodeTest to universal TestCases.load API
  (deleted per-shape parsers from testcase-framework migration)
- Fix wrong test expectations (code was correct, verified vs callers):
  getNodeAtOrNull is 1-based; recommendations includes exact prefix word;
  single-node tree serializes to canonical [1] (trailing nulls trimmed)